@@ -1,4 +1,5 @@
 1.0.0
+ * Add integration tests using in-jvm-dtest to cover blocklisted instances (CASSANDRA-19272)
  * Fix bulk writer consistency level validations for blocked instances (CASSANDRA-19257)
  * Column type mapping error for timestamp type during bulk writes (CASSANDRA-19223)
  * Speed up integration tests (CASSANDRA-19251)
